# Smart-Agriculture-For-Farmer

backend/: .gitignore  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 003a980dc4eb_create_crops_listings_table.py  020d93d380c6_create_user_table.py  0b0419a907e4_create_crops_listings_table.py  0b253937ff5a_create_user_table.py  0e9e7130a65c_create_table.py  1b9baf14a188_create_crops_listings_table.py  23e00ab81349_create_users_list_table.py  30f09a5b5f72_create_users_list_table.py  366651245e23_create_user_table.py  540f777f92e2_create_user_table.py  6eb1e7bdc27e_create_table.py  7e06002456da_add_users_table.py  7e63e04b9732_update_table.py  7f7d43421c4d_create_table.py  a63d49484593_drop_status_column.py  b32f2ab871db_create_user_table.py  b8750520e238_create_user_table.py  bb51df5e0cfe_create_table_db.py  bd72d2d52705_remove_status_column_and_sync_models.py  d574620ece3f_create_user_table.py  de1eecf937e5_create_users_list_table.py  ebfd88342637_create_table.py
backend/app/: main.py
backend/app/api/: __init__.py  cropLists.py  users.py
backend/app/config/: cloudinary.py  database.py
backend/app/core/: logging.py  security.py  settings.py
backend/app/models/: __init__.py  model.py
backend/app/schemas/: cropList.py  users.py
backend/app/service/: weatherLoc.py
frontend/: components.json  package-lock.json  package.json
frontend/src/app/: i18n.ts  layout.tsx  page.tsx
frontend/src/app/auth/: page.tsx
frontend/src/app/with-sidebar/: layout.tsx
frontend/src/hook/: useAuth.tsx  useAutoTranslate.tsx  useTranslate.tsx
(+21 files in other folders)
